# Soash

./: .gitignore  Cargo.toml  Rocket.toml  build.rs
elm-client/: package.json  webpack.config.js
elm-client/src/: Context.elm  Main.elm  UI.elm
elm-client/src/Page/: Login.elm
elm-client/wrapper/: index.js
elm-client/wrapper/styles/: styles.scss
notable-client/: README.md  package-lock.json  package.json  vue.config.js
notable-client/public/: index.html
notable-client/src/: App.vue  main.js
notable-client/src/assets/: styles.scss
notable-client/src/components/: Card.vue  ContentCard.vue  Navbar.vue  NoteEditor.vue
notable-client/src/router/: index.js
notable-client/src/views/: Landing.vue  Login.vue  NewNote.vue  Search.vue  SingleNote.vue
soash-client/: package-lock.json  package.json
soash-client/public/: index.html
soash-client/src/: App.vue  main.js
soash-client/src/assets/: colors.scss  styles.scss
soash-client/src/components/: Card.vue  FullNote.vue  InputField.vue  MiniNote.vue  Navbar.vue
soash-client/src/router/: index.js
soash-client/src/views/: EditNote.vue  Home.vue  Landing.vue  Login.vue  NewNote.vue  Register.vue  Search.vue  SingleNote.vue
src/: auth.rs  cache.rs  constants.rs  endpoints.rs  main.rs  search.rs
