[package]
name = "notable"
version = "0.1.0"
authors = ["Walter Mays <walt@waltermays.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pickledb = "0.4.0"
tantivy = "0.11.3"
bcrypt = "0.6.1"
rocket = "0.4.2"
rocket_contrib = { version = "0.4.2", features = ["json"] }
rust-embed = "0.3.5"
base64 = "0.11.0"
serde = "1.0.44"
uuid = { version = "0.8", features = ["serde", "v4"] }
atomic-counter = "1.0.1"
