[package]
name = "soash"
version = "0.1.0"
authors = ["Walter Mays <walt@waltermays.com>"]
edition = "2018"

[dependencies]
pickledb = "0.4.0"
tantivy = "0.11.3"
bcrypt = "0.6.1"
rocket = "0.4.2"
rocket_contrib = { version = "0.4.2", features = ["json"] }
rust-embed = { version = "6.3.0", features = ["interpolate-folder-path"] }
base64 = "0.11.0"
serde = "1.0.44"
uuid = { version = "0.8", features = ["serde", "v4"] }
atomic-counter = "1.0.1"
scraper = "0.11.0"
